--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "lib/**/*.jar",
         "/Users/mpelissari/Downloads/hamcrest-core-1.3(1).jar",
         "/Users/mpelissari/Downloads/junit-4.13(1).jar",
-        "/Users/mpelissari/Downloads/junit-platform-console-standalone-1.6.2.jar"
+        "/Users/mpelissari/Downloads/junit-platform-console-standalone-1.6.2.jar",
+        "/Users/mpelissari/Downloads/hamcrest-2.2.jar"
     ]
 }
