--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,9 @@
         "/Users/mpelissari/Downloads/hamcrest-core-1.3(1).jar",
         "/Users/mpelissari/Downloads/junit-4.13(1).jar",
         "/Users/mpelissari/Downloads/junit-platform-console-standalone-1.6.2.jar",
-        "/Users/mpelissari/Downloads/hamcrest-2.2.jar"
+        "/Users/mpelissari/Downloads/hamcrest-2.2.jar",
+        "hamcrest-all-1.3.0RC1.jar",
+        "mockito-all.jar",
+        "mysql-connector-java.jar"
     ]
 }
